@@ -5537,58 +5537,6 @@ November 1993: I've added function key support, and ANSI/POSIXized the code.
 					esr@snark.thyrsus.com
 				(WWW: http://www.thyrsus.com/~esr/home.html)
 
-blob
-mark :25
-data 2047
-.TH BATTLESHIPS 6 "Nov 15 1993"
-.SH NAME
-bs \- battleships game
-.SH SYNOPSIS
-bs [ -b | -s ] [ -c ]
-.SH DESCRIPTION
-This program allows you to play the familiar Battleships game against the
-computer on a 10x10 board. The interface is visual and largely
-self-explanatory; you place your ships and pick your shots by moving the
-cursor around the `sea' with the rogue/hack motion keys hjklyubn.  If
-your UNIX has a modern (non-BSD) curses, your arrow keys will also work.
-.PP
-Note that when selecting a ship to place, you must type the capital letter
-(these are, after all, capital ships). During ship placement, the `r' command
-may be used to ignore the current position and randomly place your currently
-selected ship. The `R' command will place all remaining ships randomly. The ^L
-command (form feed, ASCII 12) will force a screen redraw).
-.PP
-The command-line arguments control game modes. 
-
-.nf
-	-b selects a `blitz' variant
-	-s selects a `salvo' variant
-	-c permits ships to be placed adjacently
-.fi
-
-The `blitz' variant allows a side to shoot for as long as it continues to
-score hits.
-.PP
-The `salvo' game allows a player one shot per turn for each of his/her ships
-still afloat.  This puts a premium scoring hits early and knocking out some
-ships and also makes much harder the situation where you face a superior force
-with only your PT-boat.
-.PP
-Normally, ships must be separated by at least one square of open water. The
--c option disables this check and allows them to close-pack.
-.PP
-The algorithm the computer uses once it has found a ship to sink is provably
-optimal.  The dispersion criterion for the random-fire algorithm may not be.
-.SH AUTHORS
-Originally written by one Bruce Holloway in 1986. Salvo mode added by Chuck A.
-DeGaul (cbosgd!cad). Visual user interface, `closepack' option, code rewrite
-and manual page by Eric S. Raymond <esr@snark.thyrsus.com> August
-1989.  Keypad support and ANSI/POSIX conformance, November '93.  See
-http://www.thyrsus.com/~esr/home.html for updates,
-also other software and resources by ESR.
-
-
-
 commit refs/tags/2.1
 mark :26
 author Eric S. Raymond <esr@thyrsus.com> 785451814 +0000
@@ -11271,36 +11219,6 @@ rpm: dist
 	cp $(RPMROOT)/RPMS/`arch|sed 's/i[4-9]86/i386/'`/bs-$(V)*.rpm .
 	cp $(RPMROOT)/SRPMS/bs-$(V)*.src.rpm .
 
-
-blob
-mark :59
-data 510
-Name: bs
-Summary: Battleships against the computer (character-cell graphics)
-Version: 2.2
-Release: 1
-Source: locke.ccil.org:/pub/esr/bs-2.2.tar.gz
-Copyright: BSD-like
-Group: Games
-%description
-The classic game of Battleships agains the computer.
-Uses character-cell graphics with a visual point-and-shoot interface.
-If you're using an xterm under Linux the mouse will work.
-
-%prep
-%setup
-
-%build
-make
-
-%install
-rm -f /usr/bin/bs
-cp bs /usr/bin
-cp bs.6 /usr/man/man6/bs.6
-
-%files
-/usr/man/man6/bs.6
-/usr/bin/bs
 
 commit refs/tags/2.3
 mark :60
